[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/Settings.gd" type="Script" id=1]
[ext_resource path="res://assets/art/ui/FlatUI/kenneyUI.tres" type="Theme" id=2]
[ext_resource path="res://assets/art/inputicons/stick_dpad_s.png" type="Texture" id=3]
[ext_resource path="res://assets/art/inputicons/stick_dpad_e.png" type="Texture" id=4]
[ext_resource path="res://assets/art/inputicons/stick_dpad_w.png" type="Texture" id=5]
[ext_resource path="res://assets/art/inputicons/stick_dpad_n.png" type="Texture" id=6]
[ext_resource path="res://assets/art/inputicons/button_a.png" type="Texture" id=7]
[ext_resource path="res://assets/art/inputicons/Keyboard keys (transparent).png" type="Texture" id=8]
[ext_resource path="res://assets/art/inputicons/Ekey.png" type="Texture" id=9]
[ext_resource path="res://assets/art/inputicons/Escapekey.png" type="Texture" id=10]
[ext_resource path="res://assets/art/inputicons/button_b.png" type="Texture" id=11]
[ext_resource path="res://assets/art/inputicons/Qkey.png" type="Texture" id=12]
[ext_resource path="res://assets/art/inputicons/button_start.png" type="Texture" id=13]

[sub_resource type="Shader" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="Settings" type="Popup"]
pause_mode = 2
visible = true
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 264.0
margin_top = 80.0
margin_right = 664.0
margin_bottom = 475.0
theme = ExtResource( 2 )

[node name="Video" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 36.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Video"]
margin_left = 30.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Video/MarginContainer"]
margin_right = 191.0
margin_bottom = 60.0
columns = 2

[node name="FullscreenLabel" type="Label" parent="TabContainer/Video/MarginContainer/GridContainer"]
margin_top = 21.0
margin_right = 130.0
margin_bottom = 39.0
text = "Fullscreen"

[node name="FullscreenButton" type="CheckButton" parent="TabContainer/Video/MarginContainer/GridContainer"]
margin_left = 134.0
margin_right = 191.324
margin_bottom = 60.251
size_flags_horizontal = 3
theme = ExtResource( 2 )

[node name="Audio" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 64.0
margin_bottom = 28.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Audio"]
margin_left = 10.0
margin_top = -10.0
margin_right = 40.0
margin_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Audio/MarginContainer"]
margin_right = 364.0
margin_bottom = 134.0
columns = 2

[node name="MasterLabel" type="Label" parent="TabContainer/Audio/MarginContainer/GridContainer"]
margin_top = 12.0
margin_right = 168.0
margin_bottom = 30.0
text = "Master Volume"

[node name="MasterVolume" type="HSlider" parent="TabContainer/Audio/MarginContainer/GridContainer"]
margin_left = 172.0
margin_right = 364.0
margin_bottom = 42.0
size_flags_horizontal = 3
min_value = -60.0
max_value = 0.0

[node name="MusicLabel" type="Label" parent="TabContainer/Audio/MarginContainer/GridContainer"]
margin_top = 58.0
margin_right = 168.0
margin_bottom = 76.0
text = "Music Volume"

[node name="MusicVolume" type="HSlider" parent="TabContainer/Audio/MarginContainer/GridContainer"]
margin_left = 172.0
margin_top = 46.0
margin_right = 364.0
margin_bottom = 88.0
size_flags_horizontal = 3
min_value = -60.0
max_value = 0.0

[node name="SFXLabel" type="Label" parent="TabContainer/Audio/MarginContainer/GridContainer"]
margin_top = 104.0
margin_right = 168.0
margin_bottom = 122.0
text = "SFX Volume"

[node name="SFXVolume" type="HSlider" parent="TabContainer/Audio/MarginContainer/GridContainer"]
margin_left = 172.0
margin_top = 92.0
margin_right = 364.0
margin_bottom = 134.0
size_flags_horizontal = 3
min_value = -60.0
max_value = 0.0

[node name="Gameplay" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 156.0
margin_right = 4.0
margin_bottom = 60.0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Gameplay"]
margin_left = 10.0
margin_right = 40.0
margin_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="TabContainer/Gameplay/MarginContainer"]
margin_right = 96.0
margin_bottom = 150.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Gameplay/MarginContainer/GridContainer"]
margin_right = 96.0
margin_bottom = 18.0

[node name="UpLabel" type="Label" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer"]
margin_right = 26.0
margin_bottom = 18.0
text = "Up"

[node name="StickDpadN" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer"]
position = Vector2( 274, 6 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="W" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer"]
position = Vector2( 210, 6 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 34.0014, 0.92605, 30.2359, 30.7235 )

[node name="Up" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer"]
position = Vector2( 330, 6 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 186.601, 74.5282, 32.2637, 28.6789 )

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Gameplay/MarginContainer/GridContainer"]
margin_top = 22.0
margin_right = 96.0
margin_bottom = 40.0

[node name="DownLabel" type="Label" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer2"]
margin_right = 56.0
margin_bottom = 18.0
text = "Down"

[node name="StickDpadS" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer2"]
position = Vector2( 274, 8 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Down" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer2"]
position = Vector2( 330, 8 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 187.676, 102.849, 30.8298, 28.4403 )

[node name="S" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer2"]
position = Vector2( 210, 8 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 34.4891, 29.2112, 30.2358, 30.2359 )

[node name="HBoxContainer3" type="HBoxContainer" parent="TabContainer/Gameplay/MarginContainer/GridContainer"]
margin_top = 44.0
margin_right = 96.0
margin_bottom = 62.0

[node name="RightLabel" type="Label" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer3"]
margin_right = 57.0
margin_bottom = 18.0
text = "Right"

[node name="StickDpadE" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer3"]
position = Vector2( 274, 10 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Right" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer3"]
position = Vector2( 330, 10 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 220, 104, 28, 27 )

[node name="D" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer3"]
position = Vector2( 210, 10 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 66, 32, 28, 27 )

[node name="HBoxContainer4" type="HBoxContainer" parent="TabContainer/Gameplay/MarginContainer/GridContainer"]
margin_top = 66.0
margin_right = 96.0
margin_bottom = 84.0

[node name="LeftLabel" type="Label" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer4"]
margin_right = 52.0
margin_bottom = 18.0
text = "Left"

[node name="StickDpadW" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer4"]
position = Vector2( 274, 12 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="A" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer4"]
position = Vector2( 210, 12 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 4, 32, 28, 27 )

[node name="Left" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer4"]
position = Vector2( 330, 12 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 158, 104, 28, 27 )

[node name="HBoxContainer5" type="HBoxContainer" parent="TabContainer/Gameplay/MarginContainer/GridContainer"]
margin_top = 88.0
margin_right = 96.0
margin_bottom = 106.0

[node name="InteractLabel" type="Label" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer5"]
margin_right = 96.0
margin_bottom = 18.0
text = "Interact"

[node name="ButtonA" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer5"]
position = Vector2( 274, 14 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="Ekey" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer5"]
position = Vector2( 210, 14 )
texture = ExtResource( 9 )

[node name="HBoxContainer6" type="HBoxContainer" parent="TabContainer/Gameplay/MarginContainer/GridContainer"]
margin_top = 110.0
margin_right = 96.0
margin_bottom = 128.0

[node name="InteractLabel" type="Label" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer6"]
margin_right = 52.0
margin_bottom = 18.0
text = "Back"

[node name="ButtonB" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer6"]
position = Vector2( 274, 16 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="Qkey" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer6"]
position = Vector2( 210, 14 )
texture = ExtResource( 12 )

[node name="HBoxContainer7" type="HBoxContainer" parent="TabContainer/Gameplay/MarginContainer/GridContainer"]
margin_top = 132.0
margin_right = 96.0
margin_bottom = 150.0

[node name="InteractLabel" type="Label" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer7"]
margin_right = 65.0
margin_bottom = 18.0
text = "Pause"

[node name="Escapekey" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer7"]
position = Vector2( 210, 16 )
texture = ExtResource( 10 )

[node name="ButtonStart" type="Sprite" parent="TabContainer/Gameplay/MarginContainer/GridContainer/HBoxContainer7"]
position = Vector2( 274, 16 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[connection signal="toggled" from="TabContainer/Video/MarginContainer/GridContainer/FullscreenButton" to="." method="_on_FullscreenButton_toggled"]
[connection signal="value_changed" from="TabContainer/Audio/MarginContainer/GridContainer/MasterVolume" to="." method="_on_MasterVolume_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/MarginContainer/GridContainer/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/MarginContainer/GridContainer/SFXVolume" to="." method="_on_SFXVolume_value_changed"]
